--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -1,17 +1,11 @@
-﻿@{
-    Layout = null;
+﻿@section StyleSheet {
+    <link rel="stylesheet" href="~/Content/StockGame/Game.css" />
 }
 
-<!DOCTYPE html>
+@section Scripts {
+    <script src="~/Scripts/StockGame/Game.js" defer></script>
+}
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-    
-    </div>
-</body>
-</html>
+@section Title {
+    Game
+}
