--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
                     {
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item reportNav">
-                                <a class="nav-link" href="~/User/Login/">@login</a>
+                                <a class="nav-link" href="~/User/Login/">@*@login*@</a>
                             </li>
                         </ul>
                     }
