--- a/Capstone.Web/Views/User/Landing.cshtml
+++ b/Capstone.Web/Views/User/Landing.cshtml
@@ -26,8 +26,8 @@
     </header>
     <nav>
         <ul>
-            <li>@Html.ActionLink("Register", "Register", "Users")</li>
-            <li>@Html.ActionLink("Login", "Login", "Users")</li>   
+            <li>@Html.ActionLink("Register", "Register", "User")</li>
+            <li>@Html.ActionLink("Login", "Login", "User")</li>   
         </ul>
     </nav>
     <section>
