Continued work on Skeleton

--- a/Capstone.Web/Views/User/Register.cshtml
+++ b/Capstone.Web/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model VendingWeb.RegisterViewModel*@
+﻿@model Capstone.RegisterViewModel
 
 @section StyleSheet {
     <link rel="stylesheet" href="~/Content/StockGame/Login.css" />
