Site.css modified

--- a/Capstone.Web/Content/StockGame/Site.css
+++ b/Capstone.Web/Content/StockGame/Site.css
@@ -2,7 +2,7 @@
 .footer {
     position: relative;
     text-align: center;
-    background-image: linear-gradient(to right, black, cornflowerblue) !important;
+    background-image: linear-gradient(to right, black, lime) !important;
     padding: 5px;
     left: 0;
     bottom: 0;
