--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -33,8 +33,14 @@
     <div class="wrapper">
         <div class="jumbotron jumbotron-fluid jumboMove">
             <div class="container">
-                <h1 class="display-4">Virtual Stock Market</h1>
+                <div class="col-sm-6">
+                    <img src="~/Content/Images/ArrowLightBlue.png" class="arrow">
+                </div>
+                <div class="col-sm-6">
+                <h1 class="display-5">Virtual Stock Market</h1>
                 <p class="lead motto">Over 10 Million Players Worldwide!</p>
+                </div>
+                
             </div>
         </div>
         <nav class="navbar navbar-default navbar-static-top navbar-expand-lg navbar-light bg-light">
