--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -33,14 +33,15 @@
     <div class="wrapper">
         <div class="jumbotron jumbotron-fluid jumboMove">
             <div class="container">
-                <div class="col-sm-6">
-                    <img src="~/Content/Images/ArrowLightBlue.png" class="arrow">
+                <div class="row"> 
+                    <div class="col-sm-6">
+                        <h1 class="display-5">Virtual Stock Market</h1>
+                        <p class="lead motto">Over 10 Million Players Worldwide!</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <img src="~/Content/Images/ArrowLightBlue.png" class="arrow">
+                    </div>
                 </div>
-                <div class="col-sm-6">
-                <h1 class="display-5">Virtual Stock Market</h1>
-                <p class="lead motto">Over 10 Million Players Worldwide!</p>
-                </div>
-                
             </div>
         </div>
         <nav class="navbar navbar-default navbar-static-top navbar-expand-lg navbar-light bg-light">
