Working on Game View

--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -10,9 +10,176 @@
     Game
 }
 
-<div id="players">
+@*<div id="players">
 
 </div>
 <div id="stocks">
 
+</div>*@
+
+<div class="container-fluid debug">
+    <div class="row debug">
+        <div class="col-lg-9 debug">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#held(paid)</th>
+                        <th scope="col">Symbol</th>
+                        <th scope="col">Company</th>
+                        <th scope="col">Current Price</th>
+                        <th scope="col">Buy</th>
+                        <th scope="col">Sell</th>
+                        <th scope="col">Shares</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">5($9.42)</th>
+                        <td>SNAP</td>
+                        <td>Snapchat</td>
+                        <td>$10.53</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1($365.23)</th>
+                        <td>TSLA</td>
+                        <td>Tesla</td>
+                        <td>$368.89</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">12($168.98)</th>
+                        <td>FB</td>
+                        <td>Facebook</td>
+                        <td>$146.87</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-lg-3 debug">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#held(paid)</th>
+                        <th scope="col">Symbol</th>
+                        <th scope="col">Company</th>
+                        <th scope="col">Current Price</th>
+                        <th scope="col">Buy</th>
+                        <th scope="col">Sell</th>
+                        <th scope="col">Shares</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">5($9.42)</th>
+                        <td>SNAP</td>
+                        <td>Snapchat</td>
+                        <td>$10.53</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1($365.23)</th>
+                        <td>TSLA</td>
+                        <td>Tesla</td>
+                        <td>$368.89</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">12($168.98)</th>
+                        <td>FB</td>
+                        <td>Facebook</td>
+                        <td>$146.87</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row debug">
+        <div class="col-lg debug">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#held(paid)</th>
+                        <th scope="col">Symbol</th>
+                        <th scope="col">Company</th>
+                        <th scope="col">Current Price</th>
+                        <th scope="col">Buy</th>
+                        <th scope="col">Sell</th>
+                        <th scope="col">Shares</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">5($9.42)</th>
+                        <td>SNAP</td>
+                        <td>Snapchat</td>
+                        <td>$10.53</td>
+                        <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
+                        <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1($365.23)</th>
+                        <td>TSLA</td>
+                        <td>Tesla</td>
+                        <td>$368.89</td>
+                        <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
+                        <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">12($168.98)</th>
+                        <td>FB</td>
+                        <td>Facebook</td>
+                        <td>$146.87</td>
+                        <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
+                        <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">5($9.42)</th>
+                        <td>SNAP</td>
+                        <td>Snapchat</td>
+                        <td>$10.53</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1($365.23)</th>
+                        <td>TSLA</td>
+                        <td>Tesla</td>
+                        <td>$368.89</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">12($168.98)</th>
+                        <td>FB</td>
+                        <td>Facebook</td>
+                        <td>$146.87</td>
+                        <td>Buy</td>
+                        <td>Sell</td>
+                        <td>xxx</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
