--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -123,7 +123,7 @@
                         <th scope="col">Shares</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="stockTable">
                     <tr>
                         <th scope="row">5($9.42)</th>
                         <td>SNAP</td>
