--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -21,7 +21,7 @@
             <h1>Buttmaster69</h1>
         </div>
         <div class="col-sm-6 debug">
-            <h1>Timer</h1>
+            <h1>10:00</h1>
         </div>
     </div>
     <div class="row debug">
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="row debug">
-        <div class="col-md-9 debug">
+        <div class="col-md-9 debug table-responsive">
             <h3>UserStats</h3>
             <table class="table table-striped table-sm">
                 <thead class="thead-dark">
@@ -40,7 +40,7 @@
                         <th scope="col">#held(paid)</th>
                         <th scope="col">Symbol</th>
                         <th scope="col">Company</th>
-                        <th scope="col">Price</th>
+                        <th scope="col">Gain/Loss</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -65,7 +65,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md-3 debug">
+        <div class="col-md-3 debug table-responsive">
             <h3>Leaderboard</h3>
             <table class="table table-striped table-sm">
                 <thead class="thead-dark">
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="row debug">
-        <div class="col-lg debug">
+        <div class="col-lg debug table-responsive">
             <table class="table table-striped table-hover table-sm">
                 <thead class="thead-dark">
                     <tr>
