Working on layout

--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/StockGame/Site.css" rel="stylesheet" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Amiko' rel='stylesheet'>
     @RenderSection("StyleSheet", false)
 
     <script src="~/Scripts/StockGame/Global.js"></script>
