--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,8 @@
                         <p class="lead motto">Over 10 Million Players Worldwide!</p>
                     </div>
                     <div style="font-size: 24px;" class="col-md-6">
-                        <i class="fas fa-chart-line fa-10x"></i>
+                        @*<i class="fas fa-chart-line fa-10x"></i>*@
+                        <img class="arrow" src="~/Content/Images/SexyArrow.png" />
                     </div>
                 </div>
             </div>
