--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -19,7 +19,7 @@
 
     <div class="row debug">
         <div class="col-sm-6 debug">
-            <h1>@Model.Username</h1>
+            <h1 id="PlayerUsername">@Model.Username</h1>
         </div>
         <div class="col-sm-6 debug">
             <h1>10:00</h1>
