--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -55,27 +55,29 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mr-auto">
-                        @*@if (roleMgr.IsExecutive || roleMgr.IsCustomer || roleMgr.IsServiceman || roleMgr.IsAdministrator)*@
+                       
+                        
                         @*{*@
                             <li class="nav-item active homeNav">
                                 <a class="nav-link" href="~/StockGame/Game">Game <span class="sr-only">(current)</span></a>
                             </li>
+                        
                         @*}*@
                         @*@if (roleMgr.IsExecutive)*@
                         @*{*@
-                            <li class="nav-item reportNav">
+                            @*<li class="nav-item reportNav">
                                 <a class="nav-link" href="~/Vending/Report">Report</a>
                             </li>
                             <li class="nav-item logNav">
                                 <a class="nav-link" href="~/Vending/Log">Log</a>
-                            </li>
+                            </li>*@
                         @*}*@
 
                         @*@if (roleMgr.IsServiceman)*@
                         @*{*@
-                            <li class="nav-item modifyNav">
+                            @*<li class="nav-item modifyNav">
                                 <a class="nav-link" href="~/Vending/Modify">Restock</a>
-                            </li>
+                            </li>*@
                         @*}*@
                         @*@if (!roleMgr.IsUnknown)*@
                         @*{*@
@@ -88,7 +90,7 @@
                     @*{*@
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item reportNav">
-                                <a class="nav-link" href="~/User/Login/">@*@login*@</a>
+                                <a class="nav-link" href="~/User/Login/">login</a>
                             </li>
                         </ul>
                     @*}*@
