--- a/Capstone.Web/Views/User/Landing.cshtml
+++ b/Capstone.Web/Views/User/Landing.cshtml
@@ -1,4 +1,5 @@
 ﻿@section StyleSheet {
+    <link rel="stylesheet" href="~/Content/StockGame/agency.min.css" />
     <link rel="stylesheet" href="~/Content/StockGame/Landing.css" />
 }
 
@@ -9,15 +10,59 @@
 @section Title {
     Landing
 }
-<header>
-    <h2>Virtual Stock Market</h2>
-    <p> Compete with your pals to buy and sell stock in this fast pace investment game! </p>
-</header>
-<nav>
-    <ul>
-        <li>@Html.ActionLink("Register", "Register", "User")</li>
-        <li>@Html.ActionLink("Login", "Login", "User")</li>   
-    </ul>
-</nav>
-<section>
-</section>
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Agency - Start Bootstrap Theme</title>
+
+
+    <!-- Custom fonts for this template -->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+
+
+</head>
+
+
+
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        
+
+@*<div class="container-fluid debug game-container landing">
+       <header>
+           <div class="container debug">
+               <div class="row debug">
+                   <div class="col-md-12 debug">
+                       <h1>Virtual Stock Market</h1>
+                   </div>
+               </div>
+               <div class="row debug">
+                   <div class="col-md-12 debug">
+                    <p> Compete with your pals to buy and sell stock in this fast pace investment game! </p>
+                   </div>
+               </div>
+           </div>
+       </header>
+       <nav>
+           <div class="container debug">
+
+                   <ul class="row debug">
+
+                       <li class="col-md-6 debug">@Html.ActionLink("Register", "Register", "User")</li>
+
+                       <li class="col-md-6 debug">@Html.ActionLink("Login", "Login", "User")</li>
+
+                   </ul>
+           </div>
+       </nav>
+    </div>*@
