--- a/Capstone.Web/Views/User/Landing.cshtml
+++ b/Capstone.Web/Views/User/Landing.cshtml
@@ -38,7 +38,7 @@
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
         
 
-@*<div class="container-fluid debug game-container landing">
+<div class="container-fluid debug game-container landing">
        <header>
            <div class="container debug">
                <div class="row debug">
@@ -65,4 +65,4 @@
                    </ul>
            </div>
        </nav>
-    </div>*@
+    </div>
