--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -13,83 +13,62 @@
 
 
 
-<div class="container-fluid debug game-container">
+<div data-player="@Model.Id" id="PlayerUsername" class="container-fluid debug game-container">
 
 <div class="container debug">
-
-    <div class="row debug">
-        <div class="col-sm-6 debug">
-            <h1 data-player="@Model.Id" id="PlayerUsername">@Model.FullName</h1>
-        </div>
-        <div class="col-sm-6 debug">
-            <h1>10:00</h1>
-        </div>
-    </div>
-    <div class="row debug">
-        <div class="col-lg debug">
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-            </div>
-        </div>
-    </div>
     <div class="row debug">
         <div class="col-md-9 debug table-responsive">
-            <h3>UserStats</h3>
             <table class="table table-striped table-sm">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col">#held(paid)</th>
-                        <th scope="col">Symbol</th>
-                        <th scope="col">Company</th>
-                        <th scope="col">Gain/Loss</th>
+                        <th scope="col" width="75px">Rank</th>
+                        <th scope="col">Player</th>
+                        <th scope="col">StockWorth</th>
+                        <th scope="col">Cash</th>
+                        <th scope="col">Total</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">5($9.42)</th>
-                        <td>SNAP</td>
-                        <td>Snapchat</td>
+                        <th scope="row">1st</th>
+                        <td>Lucas Frazier</td>
+                        <td>$10.53</td>
+                        <td>$10.53</td>
                         <td>$10.53</td>
                     </tr>
                     <tr>
-                        <th scope="row">1($365.23)</th>
-                        <td>TSLA</td>
-                        <td>Tesla</td>
+                        <th scope="row">2nd</th>
+                        <td>Michael McClean</td>
                         <td>$368.89</td>
+                        <td>$10.53</td>
+                        <td>$10.53</td>
                     </tr>
                     <tr>
-                        <th scope="row">12($168.98)</th>
-                        <td>FB</td>
-                        <td>Facebook</td>
+                        <th scope="row">3rd</th>
+                        <td>Alex Carroll</td>
                         <td>$146.87</td>
+                        <td>$10.53</td>
+                        <td>$10.53</td>
+                    </tr>
+                    <tr id="playerStatusBar">
+                        <th scope="row">7th</th>
+                        <td>@(Model.FullName)</td>
+                        <td>($146.87)</td>
+                        <td>$10.53</td>
+                        <td>$10.53</td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div class="col-md-3 debug table-responsive">
-            <h3>Leaderboard</h3>
-            <table class="table table-striped table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Player</th>
-                        <th scope="col">$$$</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">Lucass</th>
-                        <td>$109,756</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">M.C.Clean</th>
-                        <td>$99,430</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Alexxx</th>
-                        <td>$129,123</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col-md-3 debug">
+            <div class="card text-center" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Current: $134,089</h5>
+                        <p class="card-text">09:23</p>
+                        <a href="#" class="btn btn-danger">EXIT GAME</a>
+                    </div>
+                
+            </div>
         </div>
     </div>
     <div class="row debug">
@@ -97,13 +76,14 @@
             <table class="table table-striped table-hover table-sm">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col">#held(paid)</th>
-                        <th scope="col">Symbol</th>
-                        <th scope="col">Company</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Buy</th>
-                        <th scope="col">Sell</th>
-                        <th scope="col">Shares</th>
+                        <th scope="col" width="75px">SYM</th>
+                        <th scope="col">CUR</th>
+                        <th scope="col">AMT</th>
+                        <th scope="col">AVG</th>
+                        <th scope="col">G/L</th>
+                        <th scope="col">BUY</th>
+                        <th scope="col">SELL</th>
+                        <th scope="col">SHARES</th>
                     </tr>
                 </thead>
                 <tbody id="stockTable">
