Fixed Creat New Account link on Login view

--- a/Capstone.Web/Content/StockGame/Game.css
+++ b/Capstone.Web/Content/StockGame/Game.css
@@ -1,7 +1,11 @@
 ﻿.debug{
-    /*border:2px solid black;*/
+    border:1px solid black;
 }
 
 #playerStatusBar{
     font-weight:bolder;
+}
+
+.top-row{
+    margin-top:40px;
 }
