--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -16,7 +16,7 @@
 <div data-player="@Model.Id" id="PlayerUsername" class="container-fluid debug game-container">
 
 <div class="container debug">
-    <div class="row debug">
+    <div class="row top-row debug">
         <div class="col-md-9 debug table-responsive">
             <table class="table table-striped table-sm">
                 <thead class="thead-dark">
@@ -61,7 +61,7 @@
             </table>
         </div>
         <div class="col-md-3 debug">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center shadow p-3 mb-5 bg-white rounded" style="width: 15rem;">
                     <div class="card-body">
                         <h5 class="card-title">Current: $134,089</h5>
                         <p class="card-text">09:23</p>
