--- a/Capstone.Web/Views/User/Login.cshtml
+++ b/Capstone.Web/Views/User/Login.cshtml
@@ -28,7 +28,7 @@
 
             </div>
             <div class="registerAccount">
-                @Html.ActionLink("Create new account", "Register")
+                @Html.ActionLink("Create new account", "Register", "User")
             </div>
             <button type="submit" class="btn btn-default">Login</button>
             <div>
