--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -63,7 +63,7 @@
         <div class="col-md-3 debug">
             <div class="card exit-card text-center shadow p-3 mb-5 bg-white rounded" style="width: 15rem;">
                     <div class="card-body">
-                        <h5 class="card-title">Current: $134,089</h5>
+                        <h5 class="card-title" id="portfolioValue">Current: $134,089</h5>
                         <p class="card-text">09:23</p>
                         <a href="#" class="btn btn-danger">EXIT GAME</a>
                     </div>
