--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -66,7 +66,7 @@
                     <div class="card-body">
                         <h5 class="card-title" id="portfolioValue">Current: $134,089</h5>
                         <p class="card-text">09:23</p>
-                        <a href="#" class="btn btn-danger">EXIT GAME</a>
+                        <a id="exit" href="#" class="btn btn-danger">EXIT GAME</a>
                     </div>
 
                 </div>
