--- a/Capstone.Web/Views/User/Landing.cshtml
+++ b/Capstone.Web/Views/User/Landing.cshtml
@@ -13,7 +13,7 @@
 
 
 
-<div class="container debug">
+<div class="container debug cardplace">
     <div class="card text-center shadow-lg p-3 mb-5 bg-white rounded">
         <div class="card-header">
             Welcome to the Virtual Stock Market Game!
