--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -4,7 +4,6 @@
 
 @section Scripts {
     <script src="~/Scripts/StockGame/Game.js" defer></script>
-    <script src="~/Scripts/StockGame/GameModal.js" defer></script>
 }
 
 @section Title {
@@ -214,11 +213,10 @@
                 </button>
             </div>
             <div class="modal-body">
-                ...
+                <ul class="modal-list"></ul>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
