--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -17,8 +17,8 @@
 
     <div class="container debug">
         <div class="row top-row debug">
-            <div class="col-md-9 debug table-responsive">
-                <table class="table table-striped table-sm">
+            <div class="col-md-9 debug table-responsive test">
+                <table class="table table-striped table-sm table-bordered">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" width="75px">Rank</th>
@@ -61,7 +61,7 @@
                 </table>
             </div>
             <div class="col-md-3 debug">
-                <div class="card exit-card text-center shadow p-3 mb-5 bg-white rounded" style="width: 15rem;">
+                <div class="card exit-card text-center shadow p-3 mb-5 bg-white rounded justify-content-center align-items-center">
                     <div class="card-body">
                         <h5 class="card-title" id="portfolioValue">Current: $134,089</h5>
                         <p class="card-text">09:23</p>
@@ -73,7 +73,7 @@
         </div>
         <div class="row debug">
             <div class="col-lg debug table-responsive">
-                <table class="table table-striped table-hover table-sm">
+                <table class="table table-striped table-hover table-sm table-bordered">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" width="75px">SYM</th>
@@ -81,9 +81,9 @@
                             <th scope="col">AMT</th>
                             <th scope="col">AVG</th>
                             <th scope="col">G/L</th>
-                            <th scope="col">BUY</th>
-                            <th scope="col">SELL</th>
-                            <th scope="col">SHARES</th>
+                            <th scope="col" width="75px">BUY</th>
+                            <th scope="col" width="75px">SELL</th>
+                            <th scope="col" width="75px">SHARES</th>
                         </tr>
                     </thead>
                     <tbody id="stockTable">
