Arrow Work in layout

--- a/Capstone.Web/Content/StockGame/Site.css
+++ b/Capstone.Web/Content/StockGame/Site.css
@@ -93,3 +93,9 @@ html {
 h1{
     margin-top:35px;
 }
+
+@media (max-width: 576px) {
+    .project-name, .subtitle {
+       display: none;
+    }
+}
