--- a/Capstone.Web/Views/StockGame/About.cshtml
+++ b/Capstone.Web/Views/StockGame/About.cshtml
@@ -20,7 +20,8 @@
                     <p class="card-text">I'm a creative problem solver with deliberate focus and follow through. Most of my experience comes from team management and digital marketing from the music business. I'm motivated by knowing that a project I'm working on has a positive impact on those around me, as I strive for a sense of significance in the work I do. After graduating I'm looking to leverage my adaptability and enthusiasm for learning in a way that will add value to a development team.</p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                    <small class="text-muted"><a href="https://www.linkedin.com/in/lucasfrazier/">LinkedIn</a></small>
+                    <small class="text-muted"><a href="https://github.com/LucasFrazier">GitHub</a></small>
                 </div>
             </div>
             <div class="card">
@@ -29,9 +30,10 @@
                         <h5 class="card-title">Michael McClean</h5>
                     <p class="card-text">I am currently in a C#/.Net 14 week bootcamp at Tech Elevator michaeldmcclean.com</p>
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
+                    <div class="card-footer">
+                        <small class="text-muted"><a href="https://www.linkedin.com/in/mdmcclean/">LinkedIn</a></small>
+                        <small class="text-muted"><a href="https://github.com/mdmcclean/">GitHub</a></small>
+                    </div>
             </div>
             <div class="card">
                <a href="https://www.linkedin.com/in/alexcarroll5/"><img class="card-img-top" src="~/Content/Images/alex.jpg" alt="Card image cap"></a>
@@ -41,7 +43,8 @@
                         I have always had a passion for numbers. I graduated from the University of Cincinnati with a major in Finance and minor in Accounting. I wish to maximize efficiency by using my detail-oriented personality to identify issues and resolve them. I look forward to collaborating with a team in order to develop user-friendly programs while maintaining their accuracy and usefulness.                    </p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                    <small class="text-muted"><a href="https://www.linkedin.com/in/alexcarroll5/">LinkedIn</a></small>
+                    <small class="text-muted"><a href="https://github.com/alexcarroll5/">GitHub</a></small>
                 </div>
             </div>
         </div>
