--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -29,7 +29,7 @@
                         </tr>
                     </thead>
                     <tbody class="leaderboardBody">
-                        <tr>
+                        @*<tr>
                             <th scope="row">1st</th>
                             <td>Lucas Frazier</td>
                             <td>$10.53</td>
@@ -56,7 +56,7 @@
                             <td>($146.87)</td>
                             <td>$10.53</td>
                             <td>$10.53</td>
-                        </tr>
+                        </tr>*@
                     </tbody>
                 </table>
             </div>
@@ -78,6 +78,7 @@
                         <tr>
                             <th scope="col" width="75px">SYM</th>
                             <th scope="col">CUR</th>
+                            <th scope="col" width="75px">AVAIL</th>
                             <th scope="col">AMT</th>
                             <th scope="col">AVG</th>
                             <th scope="col">G/L</th>
@@ -87,7 +88,7 @@
                         </tr>
                     </thead>
                     <tbody id="stockTable">
-                        <tr>
+                        @*<tr>
                             <th scope="row">5($9.42)</th>
                             <td>SNAP</td>
                             <td>Snapchat</td>
@@ -194,7 +195,7 @@
                             <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
                             <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
                             <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
+                        </tr>*@
                     </tbody>
                 </table>
             </div>
