--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -33,17 +33,16 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="jumbotron jumbotron-fluid jumboMove text-center">
+        <div class="jumbotron jumbotron-fluid jumboMove">
             <div class="container">
                 <div class="row"> 
-                    <div class="col">
-                        <h1 class="display-3 project-name">Virtual Stock Market</h1>
-                        <p class="lead motto subtitle">Over 10 Million Players Worldwide!</p>
-                        <div>
-                            <img class="arrow" src="~/Content/Images/SexyArrow.png" />
-                        </div>
+                    <div class="col-md-8 d-none d-lg-block">
+                        <h1 class="display-4">Virtual Stock Market</h1>
+                        <p class="lead motto">Over 10 Million Players Worldwide!</p>
                     </div>
-                    
+                    <div style="font-size: 24px;" class="col-md-4 img-fluid">
+                        <img class="arrow" src="~/Content/Images/SexyArrow.png" />
+                    </div>
                 </div>
             </div>
         </div>
