--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -4,6 +4,7 @@
 
 @section Scripts {
     <script src="~/Scripts/StockGame/Game.js" defer></script>
+    <script src="~/Scripts/StockGame/ExitGame.js" defer></script>
 }
 
 @section Title {
@@ -28,36 +29,7 @@
                             <th scope="col">Total</th>
                         </tr>
                     </thead>
-                    <tbody class="leaderboardBody">
-                        @*<tr>
-                            <th scope="row">1st</th>
-                            <td>Lucas Frazier</td>
-                            <td>$10.53</td>
-                            <td>$10.53</td>
-                            <td>$10.53</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2nd</th>
-                            <td>Michael McClean</td>
-                            <td>$368.89</td>
-                            <td>$10.53</td>
-                            <td>$10.53</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3rd</th>
-                            <td>Alex Carroll</td>
-                            <td>$146.87</td>
-                            <td>$10.53</td>
-                            <td>$10.53</td>
-                        </tr>
-                        <tr id="playerStatusBar">
-                            <th scope="row">7th</th>
-                            <td>@(Model.FullName)</td>
-                            <td>($146.87)</td>
-                            <td>$10.53</td>
-                            <td>$10.53</td>
-                        </tr>*@
-                    </tbody>
+                    <tbody class="leaderboardBody"></tbody>
                 </table>
             </div>
             <div class="col-md-3 debug">
@@ -87,116 +59,7 @@
                             <th scope="col" width="75px">SHARES</th>
                         </tr>
                     </thead>
-                    <tbody id="stockTable">
-                        @*<tr>
-                            <th scope="row">5($9.42)</th>
-                            <td>SNAP</td>
-                            <td>Snapchat</td>
-                            <td>$10.53</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1($365.23)</th>
-                            <td>TSLA</td>
-                            <td>Tesla</td>
-                            <td>$368.89</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">12($168.98)</th>
-                            <td>FB</td>
-                            <td>Facebook</td>
-                            <td>$146.87</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5($9.42)</th>
-                            <td>SNAP</td>
-                            <td>Snapchat</td>
-                            <td>$10.53</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1($365.23)</th>
-                            <td>TSLA</td>
-                            <td>Tesla</td>
-                            <td>$368.89</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">12($168.98)</th>
-                            <td>FB</td>
-                            <td>Facebook</td>
-                            <td>$146.87</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5($9.42)</th>
-                            <td>SNAP</td>
-                            <td>Snapchat</td>
-                            <td>$10.53</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1($365.23)</th>
-                            <td>TSLA</td>
-                            <td>Tesla</td>
-                            <td>$368.89</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">12($168.98)</th>
-                            <td>FB</td>
-                            <td>Facebook</td>
-                            <td>$146.87</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5($9.42)</th>
-                            <td>SNAP</td>
-                            <td>Snapchat</td>
-                            <td>$10.53</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1($365.23)</th>
-                            <td>TSLA</td>
-                            <td>Tesla</td>
-                            <td>$368.89</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">12($168.98)</th>
-                            <td>FB</td>
-                            <td>Facebook</td>
-                            <td>$146.87</td>
-                            <td><button type="button" class="btn btn-success btn-sm">Buy</button></td>
-                            <td><button type="button" class="btn btn-danger btn-sm">Sell</button></td>
-                            <td width="10"><input class="form-control form-control-sm" type="text"></td>
-                        </tr>*@
-                    </tbody>
+                    <tbody id="stockTable"></tbody>
                 </table>
             </div>
         </div>
