--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -5,6 +5,7 @@
 @section Scripts {
     <script src="~/Scripts/StockGame/Game.js" defer></script>
     <script src="~/Scripts/StockGame/ExitGame.js" defer></script>
+    <script src="~/Scripts/StockGame/Timer.js" defer></script>
 }
 
 @section Title {
@@ -36,7 +37,7 @@
                 <div class="card exit-card text-center shadow p-3 mb-5 bg-white rounded justify-content-center align-items-center">
                     <div class="card-body">
                         <h5 class="card-title" id="portfolioValue">Current: $134,089</h5>
-                        <p class="card-text">09:23</p>
+                        <p id="demo"></p>
                         <a id="exit" href="#" class="btn btn-danger">EXIT GAME</a>
                     </div>
 
