Results View Done?

--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -39,7 +39,7 @@
                     <div class="card-body">
                         <h5 class="card-title" id="portfolioValue">Current: $134,089</h5>
                         <p id="demo"></p>
-                        <a id="exit" href="#" class="btn btn-danger">EXIT GAME</a>
+                        <a id="exit" href="~/StockGame/Results" class="btn btn-danger">EXIT GAME</a>
                     </div>
 
                 </div>
