--- a/Capstone.Web/Views/StockGame/Game.cshtml
+++ b/Capstone.Web/Views/StockGame/Game.cshtml
@@ -40,13 +40,14 @@
                         <h5 class="card-title" id="portfolioValue">Current: $134,089</h5>
                         <p id="demo"></p>
                         <a id="exit" href="~/StockGame/Results" class="btn btn-danger">EXIT GAME</a>
+                        <a id="end" href="~/StockGame/EndGameResults" class="btn btn-danger">END GAME</a>
                     </div>
 
                 </div>
             </div>
         </div>
         <div class="row debug">
-            <div class="col-lg debug table-responsive">
+            <div class="col-lg debug table-responsive-lg">
                 <table class="table table-striped table-hover table-sm table-bordered">
                     <thead class="thead-dark">
                         <tr>
